# coset

./: .gitattributes  .gitignore  .nojekyll  .quartoignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PERFORMANCE_SUMMARY.md  README.md  _quarto.yml  activate_coset.sh  compare_matmul.py  index.html  index.qmd  large_matmul_compare.py  large_matmul_summary.py  norm_64_detailed_test.py  paper.html  paper.qmd  preview_examples.py  project.html  project.qmd  pyproject.toml  pytest.ini  quantization_error_analysis.md  quick_test.py  requirements.txt  run_examples.sh  search.json  setup.py  setup.sh  setup_cpu.py  setup_venv.sh  simple_example.py  sitemap.xml  test_cuda_product_quantization.py  test_fixed_cuda.py  test_matmul_three_way.py  test_one_sided_vlut.py  test_quantized_vectors.py  (+1 more)
.github/workflows/: publish.yml
analysis/: README.md
analysis/matmul_comparisons/: README.md
benchmarks/: PROFILING_SUMMARY.md  README.md  cuda_benchmarks_quantization.md  profile_all.py  profile_combined.py  profile_decoding.py  profile_encoding.py  profile_modulo.py  profile_quantization_error.py  test_profilers.py  test_vlut_operations.py
benchmarks/results/: modulo_results_D4_q4_M2.json  modulo_summary_D4_q4_M2.csv  vlut_results_D4_q3_M2.json  vlut_results_D4_q4_M2.json  vlut_results_E8_q3_M2.json
coset/: __init__.py
coset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coset/core/: __init__.py  base.py  layers.py  sq_layers.py  vq_layers.py  vq_qat_layer.py
coset/cuda/: BENCHMARK_RESULTS.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  accumulate_kernel.cu  batched_benchmark.py  comprehensive_benchmark_v2.py  decode_kernel.cu  e8_hnlq_decoder_kernel.cu  e8_hnlq_encoder_kernel.cu  e8_optimized_kernels.cu  e8_vlut_kernel.cu  encode_kernel.cu  fixed_cuda_benchmark.py  instructions.md  kernels.py  lut_kernel.cu  mac_kernel.cu  optimized_two_sided_vlut_kernels.cu  optimized_vlut_kernels_v2.cu  performance_analysis.md  profile_matrix_multiplication.py  proper_cuda_benchmark.py  quantize_kernel.cu  test_batched_optimized_kernels.py  test_e8_encode_decode.py  test_e8_vlut.py  test_foundation.py  test_large_scale_optimized_v2.py  test_large_scale_two_sided_vlut.py  test_large_vlut_matmul.py  test_optimized_kernels.py  test_optimized_kernels_v2.py  test_simple_vlut_accuracy.py  test_two_sided_vlut_kernels.py  test_vlut.py  test_vlut_accuracy_final.py  test_vlut_accuracy_verification.py  two_sided_vlut_neural_layers.py  two_sided_vlut_operations.py  (+3 more)
coset/distributed/: __init__.py  communicator.py  hooks.py
coset/lattices/: base.py  d4.py  e8.py  z2.py
coset/layers/: __init__.py  autograd.py  linear.py
coset/nn/: __init__.py  qlinear.py
coset/optim/: __init__.py
coset/quant/: __init__.py  e8_cuda_kernels.cu  e8_cuda_ops.py  e8_gpu.py  params.py  (+2 more)
docs/: README.md  index.html  paper.html  project.html  robots.txt
examples/: README.md  __init__.py  baseline_mlp_example.py  bert_binary_classifier_e8.py  bert_binary_classifier_lsq.py  bert_multiclass_classifier_e8.py  debug_mlp_example.py  mlp_example.py  mnist_mlp_e8.py  mnist_mlp_lsq.py  mnist_qat.py  one_sided_vlut_search.py  performance_comparison.py  qat_cold_start_comparison.py  simple_mlp_example.py  tinybert_binary_classifier_e8.py  verify_e8_codecs.py
matmul_comparisons/: README.md  e8_matmul_compare.py  large_norm_matmul_test.py  norm_1_vs_norm_64_comparison.py  simple_matmul_compare.py
prompts/: blue_print.md  chat_summary.md  design_instructions.md  modulo_ops.md  paper.md  plan.md  qat.md  qat_auto.md
pub/: cpal_2025.sty  main.tex  reference.bib
ref/: qat_auto.py
test-summaries/: INDEX.html  INDEX.md  PYTEST_CONVERSION_SUMMARY.html  PYTEST_CONVERSION_SUMMARY.md  README.html  README.md  TESTING_SUMMARY.html  TESTING_SUMMARY.md
tests/: README.md  __init__.py  test_e8_gpu.py  test_lattices.py  test_nn.py  test_one_sided_vlut_pytest.py  test_quant.py  test_quantization.py  test_quantized_vectors_pytest.py
(+93 files in other folders)
